service.yml
apiVersion: v1
kind: Service
metadata:
  name: status-service
spec:
  type: LoadBalancer
  ports:
    - port: 80
      targetPort: 5000
  selector:
    app: status-deployment
