ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: status-ingress
spec:
  backend:
    serviceName: status-service
    servicePort: 60000
  rules:
  - http:
      paths:
      - path: /*
        backend:
          serviceName: status-service
          servicePort: 60000
